--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 OLLAMA_URL=http://localhost:11434
 DATABASE_URL=postgresql+psycopg2://postgres:1024512@localhost:5432/litdb
+UNPAYWALL_EMAIL="kadir55301102@gmail.com"
+EAGER_PDF_DOWNLOAD=false
